devel
-----

* Improve readability of running and slow queries in web UI by properly left-  
  aligning the query strings.

* Allow changing collection properties for smart edge collections as well. 
  Previously, collection property changes for smart edge collections were not
  propagated.

* Adjust arangodump integration test to desired behavior, and make sure
  arangodump behaves as specified when invoking it with non-existing
  collections.

* Fixed BTS-110: Fulltext index with minLength <= 0 not allowed.

* Disallow using V8 dependent functions in SEARCH statement.

* Remove superflous `%>` output in the UI modal dialog in case the JSON editor
  was embedded.

* Fixed a misleading error message in AQL.

* Fix undistribute-remove-after-enum-coll which would allow calculations
  to be pushed to a DBServer which are not allowed to run there.

* Fixed issue ES-609: "Transaction already in use" error when running
  transaction.
  Added option `--transaction.streaming-lock-timeout` to control the timeout in
  seconds in case of parallel access to a streaming transaction.

* Returned `AQL_WARNING()` to emit warnings from UDFs.

* Fixed internal issue BTS-107, offset over the mainquery passed through a
  subquery which has modification access to shards could yield incorrect
  results, if shards are large enough and skipping was large enough, both to
  overflow the batch-size in AQL for each shard individually.

  The Following Query would be effected:

  FOR x IN 1..100
  LET sub = (
    FOR y IN Collection
    UPDATE y WITH {updated: true} IN Collection
    RETURN new
  )
  LIMIT 5, 10
  REUTRN {x,sub}

  If a shard in Collection, has enough entries to fill a batch, the second shard
  could run into the issue that it actually does not skip the first 5 main
  queries, but reports their results in addition. This has the negative side
  effect that merging the Subqueries back together was off.

* Correct some log entries.
