@@ -42,7 +42,7 @@
 #include "Cluster/ServerState.h"
 #include "GeneralServer/GeneralServer.h"
 #include "GeneralServer/GeneralServerFeature.h"
-#include "GeneralServer/RestHandlerFactory.h"
+#include "GeneralServer/ServerSecurityFeature.h"
 #include "Logger/LogMacros.h"
 #include "Logger/Logger.h"
 #include "Logger/LoggerStream.h"
@@ -1410,10 +1410,22 @@ RestStatus RestAdminClusterHandler::handlePutNumberOfServers() {
 }
 
 RestStatus RestAdminClusterHandler::handleNumberOfServers() {
-  if (!ServerState::instance()->isCoordinator() ||
-      !ExecContext::current().isAdminUser()) {
+  if (!ServerState::instance()->isCoordinator()) {
     generateError(rest::ResponseCode::FORBIDDEN, TRI_ERROR_HTTP_FORBIDDEN,
                   "only allowed on coordinators");
+    return RestStatus::DONE;
+  }
+ 
+  // GET requests are allowed for everyone, unless --server.harden is used.
+  // in this case admin privileges are required.
+  // PUT requests always require admin privileges
+  ServerSecurityFeature& security = server().getFeature<ServerSecurityFeature>();
+  bool const needsAdminPrivileges = 
+      (request()->requestType() != rest::RequestType::GET || security.isRestApiHardened());
+
+  if (needsAdminPrivileges &&
+      !ExecContext::current().isAdminUser()) {
+    generateError(rest::ResponseCode::FORBIDDEN, TRI_ERROR_HTTP_FORBIDDEN);
     return RestStatus::DONE;
   }
 
